--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -17,6 +17,9 @@ flutter:
       ios:
         pluginClass: FLTWebViewFlutterPlugin
 
+  assets:
+    - assets/
+
 dependencies:
   flutter:
     sdk: flutter
@@ -27,3 +30,4 @@ dev_dependencies:
   flutter_test:
     sdk: flutter
   pedantic: ^1.10.0
+
